--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,24 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:23.1.0'
     implementation 'com.google.firebase:firebase-storage:21.0.1'
 
+    //push
+    implementation "com.clevertap.android:push-templates:1.2.4"
+    implementation "com.clevertap.android:clevertap-android-sdk:7.0.2" // 4.4.0 and above
+
+//app inbox
+    //MANDATORY for App Inbox
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+//Optional AndroidX Media3 Libraries for Audio/Video Inbox Messages. Audio/Video messages will be dropped without these dependencies
+
+    implementation "androidx.media3:media3-exoplayer:1.1.1"
+    implementation "androidx.media3:media3-exoplayer-hls:1.1.1"
+    implementation "androidx.media3:media3-ui:1.1.1"
 
 }
 
