--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,28 +4,27 @@
     <!-- Required to allow the app to send events and user profile information -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Recommended so that CleverTap knows when to attempt a network call -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
-
-
     <application
-
-
-        android:icon="@drawable/clevertap"
-
-
         android:name="com.clevertap.android.sdk.Application"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-
+        android:icon="@drawable/clevertap"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CtAndroid"
-
         tools:targetApi="31">
+        <activity
+            android:name=".appInbox"
+            android:exported="false" />
+        <activity
+            android:name=".InApp"
+            android:exported="false" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
